<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/nav_dashboard" />
    <item
        android:id="@+id/nav_cloud"
        android:icon="@android:drawable/ic_menu_upload"
        android:title="@string/nav_cloud" />
    <item
        android:id="@+id/nav_encrypt"
        android:icon="@android:drawable/ic_lock_lock"
        android:title="@string/nav_encrypt" />
    <item
        android:id="@+id/nav_tasks"
        android:icon="@android:drawable/ic_popup_sync"
        android:title="@string/nav_tasks" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/nav_settings" />
</menu>
